update: grid-template-rows in app.scss to fix layout issue

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -16,5 +16,5 @@ body, html, #root {
     height: 100%;
     display: grid;
     grid-template-columns: 2.5fr 5fr;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: 100px 6fr;
 }
